Entrega 6/parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROGRAM ID SEMICOLON programa_var_loop nodo18 programa_func_loop addProcDir MAIN addMainProc LPARENTHESIS RPARENTHESIS bloque END
Rule 2     nodo18 -> <empty>
Rule 3     addProcDir -> <empty>
Rule 4     addMainProc -> <empty>
Rule 5     programa_var_loop -> variable programa_var_loop
Rule 6     programa_var_loop -> <empty>
Rule 7     programa_func_loop -> funcion programa_func_loop
Rule 8     programa_func_loop -> <empty>
Rule 9     bloque -> LCURLY bloque_est_loop RCURLY
Rule 10    bloque_est_loop -> estatuto bloque_est_loop
Rule 11    bloque_est_loop -> <empty>
Rule 12    tipo -> INTTYPE
Rule 13    tipo -> FLOATTYPE
Rule 14    tipo -> CHARTYPE
Rule 15    tipo -> BOOLTYPE
Rule 16    tipo -> VOIDTYPE
Rule 17    subtipo -> INTTYPE
Rule 18    subtipo -> FLOATTYPE
Rule 19    estatuto -> asignacion
Rule 20    estatuto -> condicion
Rule 21    estatuto -> escritura
Rule 22    estatuto -> regreso
Rule 23    estatuto -> ciclo
Rule 24    estatuto -> llamada
Rule 25    regreso -> RETURN exp SEMICOLON
Rule 26    variable -> VAR variable_loop
Rule 27    variable_loop -> variable_id_loop SEMICOLON variable_end_loop
Rule 28    variable_loop -> variable_arr_loop SEMICOLON variable_end_loop
Rule 29    addType -> <empty>
Rule 30    variable_id_loop -> variable_id_loop_coma COLON tipo addType
Rule 31    variable_id_loop_coma -> ID addDirVarGlobales
Rule 32    variable_id_loop_coma -> ID addDirVarGlobales COMA variable_id_loop_coma
Rule 33    variable_arr_loop -> variable_arr_coma COLON subtipo addType
Rule 34    variable_arr_coma -> ID addDirVarGlobales LBRACKET RBRACKET
Rule 35    variable_arr_coma -> ID addDirVarGlobales LBRACKET RBRACKET COMA variable_arr_coma
Rule 36    addDirVarGlobales -> <empty>
Rule 37    variable_end_loop -> variable
Rule 38    variable_end_loop -> <empty>
Rule 39    escritura -> PRINT LPARENTHESIS escritura_type RPARENTHESIS SEMICOLON
Rule 40    escritura_type -> expresion
Rule 41    escritura_type -> QUOTE CTECHAR QUOTE
Rule 42    funcion -> tipo FUNC ID LPARENTHESIS funcion_option RPARENTHESIS addProcDirFunc bloque clearFunc
Rule 43    funcion -> tipo FUNC ID LPARENTHESIS funcion_option RPARENTHESIS variable_func addProcDirFuncVars bloque clearFunc
Rule 44    variable_func -> VAR variable_loop_func
Rule 45    variable_loop_func -> variable_id_loop_func SEMICOLON variable_end_loop_func
Rule 46    variable_loop_func -> variable_arr_loop_func SEMICOLON variable_end_loop_func
Rule 47    variable_id_loop_func -> variable_id_loop_coma_func COLON tipo addTypeFunc
Rule 48    variable_end_loop_func -> variable_func
Rule 49    variable_end_loop_func -> <empty>
Rule 50    variable_arr_loop_func -> variable_arr_coma_func COLON subtipo addTypeFunc
Rule 51    variable_id_loop_coma_func -> ID addDirVarLocalesFunc
Rule 52    variable_id_loop_coma_func -> ID addDirVarLocalesFunc COMA variable_id_loop_coma_func
Rule 53    variable_arr_coma_func -> ID addDirVarLocalesFunc LBRACKET RBRACKET
Rule 54    variable_arr_coma_func -> ID addDirVarLocalesFunc LBRACKET RBRACKET COMA variable_arr_coma_func
Rule 55    addProcDirFunc -> <empty>
Rule 56    clearFunc -> <empty>
Rule 57    addProcDirFuncVars -> <empty>
Rule 58    funcion_option -> argumentos
Rule 59    funcion_option -> <empty>
Rule 60    argumentos -> ID addDirVarLocalesFunc COLON tipo addParamFunc argumentos_loop
Rule 61    argumentos_loop -> COMA argumentos
Rule 62    argumentos_loop -> <empty>
Rule 63    addDirVarLocalesFunc -> <empty>
Rule 64    addParamFunc -> <empty>
Rule 65    addTypeFunc -> <empty>
Rule 66    ciclo -> WHILE LPARENTHESIS nodo16 expresion RPARENTHESIS nodo13 bloque nodo17
Rule 67    nodo16 -> <empty>
Rule 68    nodo17 -> <empty>
Rule 69    condicion -> IF LPARENTHESIS expresion RPARENTHESIS nodo13 bloque condicion_option nodo15
Rule 70    condicion_option -> ELSE nodo14 bloque
Rule 71    condicion_option -> <empty>
Rule 72    nodo15 -> <empty>
Rule 73    nodo14 -> <empty>
Rule 74    nodo13 -> <empty>
Rule 75    expresion -> nuevaexp expresion_option nodo11 expresion_loop
Rule 76    expresion_option -> AND nodo12_and nuevaexp
Rule 77    expresion_option -> OR nodo12_or nuevaexp
Rule 78    expresion_option -> <empty>
Rule 79    expresion_loop -> expresion
Rule 80    expresion_loop -> <empty>
Rule 81    nodo12_and -> <empty>
Rule 82    nodo12_or -> <empty>
Rule 83    nodo11 -> <empty>
Rule 84    nuevaexp -> exp nuevaexp_type nodo10
Rule 85    nuevaexp_type -> LESS nodo9_menor exp
Rule 86    nuevaexp_type -> GREATER nodo9_mayor exp
Rule 87    nuevaexp_type -> LESSEQUAL nodo9_menorig exp
Rule 88    nuevaexp_type -> GREATEREQUAL nodo9_mayorig exp
Rule 89    nuevaexp_type -> NOTEQUAL nodo9_dif exp
Rule 90    nuevaexp_type -> EQUAL nodo9_igual exp
Rule 91    nuevaexp_type -> <empty>
Rule 92    nodo10 -> <empty>
Rule 93    nodo9_menor -> <empty>
Rule 94    nodo9_mayor -> <empty>
Rule 95    nodo9_menorig -> <empty>
Rule 96    nodo9_mayorig -> <empty>
Rule 97    nodo9_dif -> <empty>
Rule 98    nodo9_igual -> <empty>
Rule 99    asignacion -> ID asignacion_option
Rule 100   asignacion_option -> ASSIGN expresion nodo8 SEMICOLON
Rule 101   asignacion_option -> LBRACKET CTEINT RBRACKET ASSIGN nodo8 LBRACKET asignacion_type RBRACKET SEMICOLON
Rule 102   asignacion_type -> CTEINT
Rule 103   asignacion_type -> CTEFLOAT
Rule 104   asignacion_type -> CTEINT COMA asignacion_type
Rule 105   asignacion_type -> CTEFLOAT COMA asignacion_type
Rule 106   nodo8 -> <empty>
Rule 107   exp -> termino nodo5 exp_loop
Rule 108   exp_loop -> exp_type_loop
Rule 109   exp_loop -> <empty>
Rule 110   exp_type_loop -> ADDITION nodo3_suma exp
Rule 111   exp_type_loop -> SUBTRACTION nodo3_resta exp
Rule 112   nodo3_suma -> <empty>
Rule 113   nodo3_resta -> <empty>
Rule 114   nodo5 -> <empty>
Rule 115   termino -> factor nodo4 termino_loop
Rule 116   termino_loop -> termino_type_loop
Rule 117   termino_loop -> <empty>
Rule 118   termino_type_loop -> MULTIPLICATION nodo2_mult termino
Rule 119   termino_type_loop -> DIVISION nodo2_div termino
Rule 120   nodo2_mult -> <empty>
Rule 121   nodo2_div -> <empty>
Rule 122   nodo4 -> <empty>
Rule 123   factor -> factor_var
Rule 124   factor -> factor_exp
Rule 125   factor_var -> varcte nodo1
Rule 126   factor_exp -> LPARENTHESIS nodo6 expresion RPARENTHESIS nodo7
Rule 127   nodo1 -> <empty>
Rule 128   nodo6 -> <empty>
Rule 129   nodo7 -> <empty>
Rule 130   varcte -> ID varcte_arr
Rule 131   varcte -> CTEINT nodoCteE
Rule 132   varcte -> CTEFLOAT nodoCteF
Rule 133   varcte -> CTEBOOL nodoCteB
Rule 134   varcte -> CTECHAR nodoCteC
Rule 135   llamada -> ID checkCall LPARENTHESIS llamada_params RPARENTHESIS SEMICOLON
Rule 136   checkCall -> <empty>
Rule 137   llamada_params -> params
Rule 138   llamada_params -> <empty>
Rule 139   params -> varcte
Rule 140   params -> varcte COMA params
Rule 141   varcte_arr -> LBRACKET RBRACKET
Rule 142   varcte_arr -> <empty>
Rule 143   CTEBOOL -> TRUE
Rule 144   CTEBOOL -> FALSE
Rule 145   nodoCteE -> <empty>
Rule 146   nodoCteF -> <empty>
Rule 147   nodoCteB -> <empty>
Rule 148   nodoCteC -> <empty>

Terminals, with rules where they appear

ADDITION             : 110
AND                  : 76
ASSIGN               : 100 101
BOOLTYPE             : 15
CHARTYPE             : 14
COLON                : 30 33 47 50 60
COMA                 : 32 35 52 54 61 104 105 140
CTECHAR              : 41 134
CTEFLOAT             : 103 105 132
CTEINT               : 101 102 104 131
DIVISION             : 119
ELSE                 : 70
END                  : 1
EQUAL                : 90
FALSE                : 144
FLOATTYPE            : 13 18
FUNC                 : 42 43
GREATER              : 86
GREATEREQUAL         : 88
ID                   : 1 31 32 34 35 42 43 51 52 53 54 60 99 130 135
IF                   : 69
INTTYPE              : 12 17
LBRACKET             : 34 35 53 54 101 101 141
LCURLY               : 9
LESS                 : 85
LESSEQUAL            : 87
LPARENTHESIS         : 1 39 42 43 66 69 126 135
MAIN                 : 1
MULTIPLICATION       : 118
NOTEQUAL             : 89
OR                   : 77
PRINT                : 39
PROGRAM              : 1
QUOTE                : 41 41
RBRACKET             : 34 35 53 54 101 101 141
RCURLY               : 9
RETURN               : 25
RPARENTHESIS         : 1 39 42 43 66 69 126 135
SEMICOLON            : 1 25 27 28 39 45 46 100 101 135
SUBTRACTION          : 111
TRUE                 : 143
VAR                  : 26 44
VOIDTYPE             : 16
WHILE                : 66
error                : 

Nonterminals, with rules where they appear

CTEBOOL              : 133
addDirVarGlobales    : 31 32 34 35
addDirVarLocalesFunc : 51 52 53 54 60
addMainProc          : 1
addParamFunc         : 60
addProcDir           : 1
addProcDirFunc       : 42
addProcDirFuncVars   : 43
addType              : 30 33
addTypeFunc          : 47 50
argumentos           : 58 61
argumentos_loop      : 60
asignacion           : 19
asignacion_option    : 99
asignacion_type      : 101 104 105
bloque               : 1 42 43 66 69 70
bloque_est_loop      : 9 10
checkCall            : 135
ciclo                : 23
clearFunc            : 42 43
condicion            : 20
condicion_option     : 69
escritura            : 21
escritura_type       : 39
estatuto             : 10
exp                  : 25 84 85 86 87 88 89 90 110 111
exp_loop             : 107
exp_type_loop        : 108
expresion            : 40 66 69 79 100 126
expresion_loop       : 75
expresion_option     : 75
factor               : 115
factor_exp           : 124
factor_var           : 123
funcion              : 7
funcion_option       : 42 43
llamada              : 24
llamada_params       : 135
nodo1                : 125
nodo10               : 84
nodo11               : 75
nodo12_and           : 76
nodo12_or            : 77
nodo13               : 66 69
nodo14               : 70
nodo15               : 69
nodo16               : 66
nodo17               : 66
nodo18               : 1
nodo2_div            : 119
nodo2_mult           : 118
nodo3_resta          : 111
nodo3_suma           : 110
nodo4                : 115
nodo5                : 107
nodo6                : 126
nodo7                : 126
nodo8                : 100 101
nodo9_dif            : 89
nodo9_igual          : 90
nodo9_mayor          : 86
nodo9_mayorig        : 88
nodo9_menor          : 85
nodo9_menorig        : 87
nodoCteB             : 133
nodoCteC             : 134
nodoCteE             : 131
nodoCteF             : 132
nuevaexp             : 75 76 77
nuevaexp_type        : 84
params               : 137 140
programa             : 0
programa_func_loop   : 1 7
programa_var_loop    : 1 5
regreso              : 22
subtipo              : 33 50
termino              : 107 118 119
termino_loop         : 115
termino_type_loop    : 116
tipo                 : 30 42 43 47 60
varcte               : 125 139 140
varcte_arr           : 130
variable             : 5 37
variable_arr_coma    : 33 35
variable_arr_coma_func : 50 54
variable_arr_loop    : 28
variable_arr_loop_func : 46
variable_end_loop    : 27 28
variable_end_loop_func : 45 46
variable_func        : 43 48
variable_id_loop     : 27
variable_id_loop_coma : 30 32
variable_id_loop_coma_func : 47 52
variable_id_loop_func : 45
variable_loop        : 26
variable_loop_func   : 44

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAM ID SEMICOLON programa_var_loop nodo18 programa_func_loop addProcDir MAIN addMainProc LPARENTHESIS RPARENTHESIS bloque END

    PROGRAM         shift and go to state 1

    programa                       shift and go to state 2

state 1

    (1) programa -> PROGRAM . ID SEMICOLON programa_var_loop nodo18 programa_func_loop addProcDir MAIN addMainProc LPARENTHESIS RPARENTHESIS bloque END

    ID              shift and go to state 3


state 2

    (0) S' -> programa .



state 3

    (1) programa -> PROGRAM ID . SEMICOLON programa_var_loop nodo18 programa_func_loop addProcDir MAIN addMainProc LPARENTHESIS RPARENTHESIS bloque END

    SEMICOLON       shift and go to state 4


state 4

    (1) programa -> PROGRAM ID SEMICOLON . programa_var_loop nodo18 programa_func_loop addProcDir MAIN addMainProc LPARENTHESIS RPARENTHESIS bloque END
    (5) programa_var_loop -> . variable programa_var_loop
    (6) programa_var_loop -> .
    (26) variable -> . VAR variable_loop

    INTTYPE         reduce using rule 6 (programa_var_loop -> .)
    FLOATTYPE       reduce using rule 6 (programa_var_loop -> .)
    CHARTYPE        reduce using rule 6 (programa_var_loop -> .)
    BOOLTYPE        reduce using rule 6 (programa_var_loop -> .)
    VOIDTYPE        reduce using rule 6 (programa_var_loop -> .)
    MAIN            reduce using rule 6 (programa_var_loop -> .)
    VAR             shift and go to state 5

    programa_var_loop              shift and go to state 6
    variable                       shift and go to state 7

state 5

    (26) variable -> VAR . variable_loop
    (27) variable_loop -> . variable_id_loop SEMICOLON variable_end_loop
    (28) variable_loop -> . variable_arr_loop SEMICOLON variable_end_loop
    (30) variable_id_loop -> . variable_id_loop_coma COLON tipo addType
    (33) variable_arr_loop -> . variable_arr_coma COLON subtipo addType
    (31) variable_id_loop_coma -> . ID addDirVarGlobales
    (32) variable_id_loop_coma -> . ID addDirVarGlobales COMA variable_id_loop_coma
    (34) variable_arr_coma -> . ID addDirVarGlobales LBRACKET RBRACKET
    (35) variable_arr_coma -> . ID addDirVarGlobales LBRACKET RBRACKET COMA variable_arr_coma

    ID              shift and go to state 13

    variable_arr_loop              shift and go to state 8
    variable_id_loop_coma          shift and go to state 9
    variable_id_loop               shift and go to state 10
    variable_arr_coma              shift and go to state 11
    variable_loop                  shift and go to state 12

state 6

    (1) programa -> PROGRAM ID SEMICOLON programa_var_loop . nodo18 programa_func_loop addProcDir MAIN addMainProc LPARENTHESIS RPARENTHESIS bloque END
    (2) nodo18 -> .

    INTTYPE         reduce using rule 2 (nodo18 -> .)
    FLOATTYPE       reduce using rule 2 (nodo18 -> .)
    CHARTYPE        reduce using rule 2 (nodo18 -> .)
    BOOLTYPE        reduce using rule 2 (nodo18 -> .)
    VOIDTYPE        reduce using rule 2 (nodo18 -> .)
    MAIN            reduce using rule 2 (nodo18 -> .)

    nodo18                         shift and go to state 14

state 7

    (5) programa_var_loop -> variable . programa_var_loop
    (5) programa_var_loop -> . variable programa_var_loop
    (6) programa_var_loop -> .
    (26) variable -> . VAR variable_loop

    INTTYPE         reduce using rule 6 (programa_var_loop -> .)
    FLOATTYPE       reduce using rule 6 (programa_var_loop -> .)
    CHARTYPE        reduce using rule 6 (programa_var_loop -> .)
    BOOLTYPE        reduce using rule 6 (programa_var_loop -> .)
    VOIDTYPE        reduce using rule 6 (programa_var_loop -> .)
    MAIN            reduce using rule 6 (programa_var_loop -> .)
    VAR             shift and go to state 5

    variable                       shift and go to state 7
    programa_var_loop              shift and go to state 15

state 8

    (28) variable_loop -> variable_arr_loop . SEMICOLON variable_end_loop

    SEMICOLON       shift and go to state 16


state 9

    (30) variable_id_loop -> variable_id_loop_coma . COLON tipo addType

    COLON           shift and go to state 17


state 10

    (27) variable_loop -> variable_id_loop . SEMICOLON variable_end_loop

    SEMICOLON       shift and go to state 18


state 11

    (33) variable_arr_loop -> variable_arr_coma . COLON subtipo addType

    COLON           shift and go to state 19


state 12

    (26) variable -> VAR variable_loop .

    VAR             reduce using rule 26 (variable -> VAR variable_loop .)
    INTTYPE         reduce using rule 26 (variable -> VAR variable_loop .)
    FLOATTYPE       reduce using rule 26 (variable -> VAR variable_loop .)
    CHARTYPE        reduce using rule 26 (variable -> VAR variable_loop .)
    BOOLTYPE        reduce using rule 26 (variable -> VAR variable_loop .)
    VOIDTYPE        reduce using rule 26 (variable -> VAR variable_loop .)
    MAIN            reduce using rule 26 (variable -> VAR variable_loop .)


state 13

    (31) variable_id_loop_coma -> ID . addDirVarGlobales
    (32) variable_id_loop_coma -> ID . addDirVarGlobales COMA variable_id_loop_coma
    (34) variable_arr_coma -> ID . addDirVarGlobales LBRACKET RBRACKET
    (35) variable_arr_coma -> ID . addDirVarGlobales LBRACKET RBRACKET COMA variable_arr_coma
    (36) addDirVarGlobales -> .

    COMA            reduce using rule 36 (addDirVarGlobales -> .)
    LBRACKET        reduce using rule 36 (addDirVarGlobales -> .)
    COLON           reduce using rule 36 (addDirVarGlobales -> .)

    addDirVarGlobales              shift and go to state 20

state 14

    (1) programa -> PROGRAM ID SEMICOLON programa_var_loop nodo18 . programa_func_loop addProcDir MAIN addMainProc LPARENTHESIS RPARENTHESIS bloque END
    (7) programa_func_loop -> . funcion programa_func_loop
    (8) programa_func_loop -> .
    (42) funcion -> . tipo FUNC ID LPARENTHESIS funcion_option RPARENTHESIS addProcDirFunc bloque clearFunc
    (43) funcion -> . tipo FUNC ID LPARENTHESIS funcion_option RPARENTHESIS variable_func addProcDirFuncVars bloque clearFunc
    (12) tipo -> . INTTYPE
    (13) tipo -> . FLOATTYPE
    (14) tipo -> . CHARTYPE
    (15) tipo -> . BOOLTYPE
    (16) tipo -> . VOIDTYPE

    MAIN            reduce using rule 8 (programa_func_loop -> .)
    INTTYPE         shift and go to state 26
    FLOATTYPE       shift and go to state 25
    CHARTYPE        shift and go to state 27
    BOOLTYPE        shift and go to state 24
    VOIDTYPE        shift and go to state 22

    tipo                           shift and go to state 21
    programa_func_loop             shift and go to state 28
    funcion                        shift and go to state 23

state 15

    (5) programa_var_loop -> variable programa_var_loop .

    INTTYPE         reduce using rule 5 (programa_var_loop -> variable programa_var_loop .)
    FLOATTYPE       reduce using rule 5 (programa_var_loop -> variable programa_var_loop .)
    CHARTYPE        reduce using rule 5 (programa_var_loop -> variable programa_var_loop .)
    BOOLTYPE        reduce using rule 5 (programa_var_loop -> variable programa_var_loop .)
    VOIDTYPE        reduce using rule 5 (programa_var_loop -> variable programa_var_loop .)
    MAIN            reduce using rule 5 (programa_var_loop -> variable programa_var_loop .)


state 16

    (28) variable_loop -> variable_arr_loop SEMICOLON . variable_end_loop
    (37) variable_end_loop -> . variable
    (38) variable_end_loop -> .
    (26) variable -> . VAR variable_loop

  ! shift/reduce conflict for VAR resolved as shift
    INTTYPE         reduce using rule 38 (variable_end_loop -> .)
    FLOATTYPE       reduce using rule 38 (variable_end_loop -> .)
    CHARTYPE        reduce using rule 38 (variable_end_loop -> .)
    BOOLTYPE        reduce using rule 38 (variable_end_loop -> .)
    VOIDTYPE        reduce using rule 38 (variable_end_loop -> .)
    MAIN            reduce using rule 38 (variable_end_loop -> .)
    VAR             shift and go to state 5

  ! VAR             [ reduce using rule 38 (variable_end_loop -> .) ]

    variable                       shift and go to state 30
    variable_end_loop              shift and go to state 29

state 17

    (30) variable_id_loop -> variable_id_loop_coma COLON . tipo addType
    (12) tipo -> . INTTYPE
    (13) tipo -> . FLOATTYPE
    (14) tipo -> . CHARTYPE
    (15) tipo -> . BOOLTYPE
    (16) tipo -> . VOIDTYPE

    INTTYPE         shift and go to state 26
    FLOATTYPE       shift and go to state 25
    CHARTYPE        shift and go to state 27
    BOOLTYPE        shift and go to state 24
    VOIDTYPE        shift and go to state 22

    tipo                           shift and go to state 31

state 18

    (27) variable_loop -> variable_id_loop SEMICOLON . variable_end_loop
    (37) variable_end_loop -> . variable
    (38) variable_end_loop -> .
    (26) variable -> . VAR variable_loop

  ! shift/reduce conflict for VAR resolved as shift
    INTTYPE         reduce using rule 38 (variable_end_loop -> .)
    FLOATTYPE       reduce using rule 38 (variable_end_loop -> .)
    CHARTYPE        reduce using rule 38 (variable_end_loop -> .)
    BOOLTYPE        reduce using rule 38 (variable_end_loop -> .)
    VOIDTYPE        reduce using rule 38 (variable_end_loop -> .)
    MAIN            reduce using rule 38 (variable_end_loop -> .)
    VAR             shift and go to state 5

  ! VAR             [ reduce using rule 38 (variable_end_loop -> .) ]

    variable                       shift and go to state 30
    variable_end_loop              shift and go to state 32

state 19

    (33) variable_arr_loop -> variable_arr_coma COLON . subtipo addType
    (17) subtipo -> . INTTYPE
    (18) subtipo -> . FLOATTYPE

    INTTYPE         shift and go to state 33
    FLOATTYPE       shift and go to state 34

    subtipo                        shift and go to state 35

state 20

    (31) variable_id_loop_coma -> ID addDirVarGlobales .
    (32) variable_id_loop_coma -> ID addDirVarGlobales . COMA variable_id_loop_coma
    (34) variable_arr_coma -> ID addDirVarGlobales . LBRACKET RBRACKET
    (35) variable_arr_coma -> ID addDirVarGlobales . LBRACKET RBRACKET COMA variable_arr_coma

    COLON           reduce using rule 31 (variable_id_loop_coma -> ID addDirVarGlobales .)
    COMA            shift and go to state 37
    LBRACKET        shift and go to state 36


state 21

    (42) funcion -> tipo . FUNC ID LPARENTHESIS funcion_option RPARENTHESIS addProcDirFunc bloque clearFunc
    (43) funcion -> tipo . FUNC ID LPARENTHESIS funcion_option RPARENTHESIS variable_func addProcDirFuncVars bloque clearFunc

    FUNC            shift and go to state 38


state 22

    (16) tipo -> VOIDTYPE .

    FUNC            reduce using rule 16 (tipo -> VOIDTYPE .)
    COMA            reduce using rule 16 (tipo -> VOIDTYPE .)
    RPARENTHESIS    reduce using rule 16 (tipo -> VOIDTYPE .)
    SEMICOLON       reduce using rule 16 (tipo -> VOIDTYPE .)


state 23

    (7) programa_func_loop -> funcion . programa_func_loop
    (7) programa_func_loop -> . funcion programa_func_loop
    (8) programa_func_loop -> .
    (42) funcion -> . tipo FUNC ID LPARENTHESIS funcion_option RPARENTHESIS addProcDirFunc bloque clearFunc
    (43) funcion -> . tipo FUNC ID LPARENTHESIS funcion_option RPARENTHESIS variable_func addProcDirFuncVars bloque clearFunc
    (12) tipo -> . INTTYPE
    (13) tipo -> . FLOATTYPE
    (14) tipo -> . CHARTYPE
    (15) tipo -> . BOOLTYPE
    (16) tipo -> . VOIDTYPE

    MAIN            reduce using rule 8 (programa_func_loop -> .)
    INTTYPE         shift and go to state 26
    FLOATTYPE       shift and go to state 25
    CHARTYPE        shift and go to state 27
    BOOLTYPE        shift and go to state 24
    VOIDTYPE        shift and go to state 22

    tipo                           shift and go to state 21
    programa_func_loop             shift and go to state 39
    funcion                        shift and go to state 23

state 24

    (15) tipo -> BOOLTYPE .

    FUNC            reduce using rule 15 (tipo -> BOOLTYPE .)
    COMA            reduce using rule 15 (tipo -> BOOLTYPE .)
    RPARENTHESIS    reduce using rule 15 (tipo -> BOOLTYPE .)
    SEMICOLON       reduce using rule 15 (tipo -> BOOLTYPE .)


state 25

    (13) tipo -> FLOATTYPE .

    FUNC            reduce using rule 13 (tipo -> FLOATTYPE .)
    COMA            reduce using rule 13 (tipo -> FLOATTYPE .)
    RPARENTHESIS    reduce using rule 13 (tipo -> FLOATTYPE .)
    SEMICOLON       reduce using rule 13 (tipo -> FLOATTYPE .)


state 26

    (12) tipo -> INTTYPE .

    FUNC            reduce using rule 12 (tipo -> INTTYPE .)
    COMA            reduce using rule 12 (tipo -> INTTYPE .)
    RPARENTHESIS    reduce using rule 12 (tipo -> INTTYPE .)
    SEMICOLON       reduce using rule 12 (tipo -> INTTYPE .)


state 27

    (14) tipo -> CHARTYPE .

    FUNC            reduce using rule 14 (tipo -> CHARTYPE .)
    COMA            reduce using rule 14 (tipo -> CHARTYPE .)
    RPARENTHESIS    reduce using rule 14 (tipo -> CHARTYPE .)
    SEMICOLON       reduce using rule 14 (tipo -> CHARTYPE .)


state 28

    (1) programa -> PROGRAM ID SEMICOLON programa_var_loop nodo18 programa_func_loop . addProcDir MAIN addMainProc LPARENTHESIS RPARENTHESIS bloque END
    (3) addProcDir -> .

    MAIN            reduce using rule 3 (addProcDir -> .)

    addProcDir                     shift and go to state 40

state 29

    (28) variable_loop -> variable_arr_loop SEMICOLON variable_end_loop .

    VAR             reduce using rule 28 (variable_loop -> variable_arr_loop SEMICOLON variable_end_loop .)
    INTTYPE         reduce using rule 28 (variable_loop -> variable_arr_loop SEMICOLON variable_end_loop .)
    FLOATTYPE       reduce using rule 28 (variable_loop -> variable_arr_loop SEMICOLON variable_end_loop .)
    CHARTYPE        reduce using rule 28 (variable_loop -> variable_arr_loop SEMICOLON variable_end_loop .)
    BOOLTYPE        reduce using rule 28 (variable_loop -> variable_arr_loop SEMICOLON variable_end_loop .)
    VOIDTYPE        reduce using rule 28 (variable_loop -> variable_arr_loop SEMICOLON variable_end_loop .)
    MAIN            reduce using rule 28 (variable_loop -> variable_arr_loop SEMICOLON variable_end_loop .)


state 30

    (37) variable_end_loop -> variable .

    VAR             reduce using rule 37 (variable_end_loop -> variable .)
    INTTYPE         reduce using rule 37 (variable_end_loop -> variable .)
    FLOATTYPE       reduce using rule 37 (variable_end_loop -> variable .)
    CHARTYPE        reduce using rule 37 (variable_end_loop -> variable .)
    BOOLTYPE        reduce using rule 37 (variable_end_loop -> variable .)
    VOIDTYPE        reduce using rule 37 (variable_end_loop -> variable .)
    MAIN            reduce using rule 37 (variable_end_loop -> variable .)


state 31

    (30) variable_id_loop -> variable_id_loop_coma COLON tipo . addType
    (29) addType -> .

    SEMICOLON       reduce using rule 29 (addType -> .)

    addType                        shift and go to state 41

state 32

    (27) variable_loop -> variable_id_loop SEMICOLON variable_end_loop .

    VAR             reduce using rule 27 (variable_loop -> variable_id_loop SEMICOLON variable_end_loop .)
    INTTYPE         reduce using rule 27 (variable_loop -> variable_id_loop SEMICOLON variable_end_loop .)
    FLOATTYPE       reduce using rule 27 (variable_loop -> variable_id_loop SEMICOLON variable_end_loop .)
    CHARTYPE        reduce using rule 27 (variable_loop -> variable_id_loop SEMICOLON variable_end_loop .)
    BOOLTYPE        reduce using rule 27 (variable_loop -> variable_id_loop SEMICOLON variable_end_loop .)
    VOIDTYPE        reduce using rule 27 (variable_loop -> variable_id_loop SEMICOLON variable_end_loop .)
    MAIN            reduce using rule 27 (variable_loop -> variable_id_loop SEMICOLON variable_end_loop .)


state 33

    (17) subtipo -> INTTYPE .

    SEMICOLON       reduce using rule 17 (subtipo -> INTTYPE .)


state 34

    (18) subtipo -> FLOATTYPE .

    SEMICOLON       reduce using rule 18 (subtipo -> FLOATTYPE .)


state 35

    (33) variable_arr_loop -> variable_arr_coma COLON subtipo . addType
    (29) addType -> .

    SEMICOLON       reduce using rule 29 (addType -> .)

    addType                        shift and go to state 42

state 36

    (34) variable_arr_coma -> ID addDirVarGlobales LBRACKET . RBRACKET
    (35) variable_arr_coma -> ID addDirVarGlobales LBRACKET . RBRACKET COMA variable_arr_coma

    RBRACKET        shift and go to state 43


state 37

    (32) variable_id_loop_coma -> ID addDirVarGlobales COMA . variable_id_loop_coma
    (31) variable_id_loop_coma -> . ID addDirVarGlobales
    (32) variable_id_loop_coma -> . ID addDirVarGlobales COMA variable_id_loop_coma

    ID              shift and go to state 44

    variable_id_loop_coma          shift and go to state 45

state 38

    (42) funcion -> tipo FUNC . ID LPARENTHESIS funcion_option RPARENTHESIS addProcDirFunc bloque clearFunc
    (43) funcion -> tipo FUNC . ID LPARENTHESIS funcion_option RPARENTHESIS variable_func addProcDirFuncVars bloque clearFunc

    ID              shift and go to state 46


state 39

    (7) programa_func_loop -> funcion programa_func_loop .

    MAIN            reduce using rule 7 (programa_func_loop -> funcion programa_func_loop .)


state 40

    (1) programa -> PROGRAM ID SEMICOLON programa_var_loop nodo18 programa_func_loop addProcDir . MAIN addMainProc LPARENTHESIS RPARENTHESIS bloque END

    MAIN            shift and go to state 47


state 41

    (30) variable_id_loop -> variable_id_loop_coma COLON tipo addType .

    SEMICOLON       reduce using rule 30 (variable_id_loop -> variable_id_loop_coma COLON tipo addType .)


state 42

    (33) variable_arr_loop -> variable_arr_coma COLON subtipo addType .

    SEMICOLON       reduce using rule 33 (variable_arr_loop -> variable_arr_coma COLON subtipo addType .)


state 43

    (34) variable_arr_coma -> ID addDirVarGlobales LBRACKET RBRACKET .
    (35) variable_arr_coma -> ID addDirVarGlobales LBRACKET RBRACKET . COMA variable_arr_coma

    COLON           reduce using rule 34 (variable_arr_coma -> ID addDirVarGlobales LBRACKET RBRACKET .)
    COMA            shift and go to state 48


state 44

    (31) variable_id_loop_coma -> ID . addDirVarGlobales
    (32) variable_id_loop_coma -> ID . addDirVarGlobales COMA variable_id_loop_coma
    (36) addDirVarGlobales -> .

    COMA            reduce using rule 36 (addDirVarGlobales -> .)
    COLON           reduce using rule 36 (addDirVarGlobales -> .)

    addDirVarGlobales              shift and go to state 49

state 45

    (32) variable_id_loop_coma -> ID addDirVarGlobales COMA variable_id_loop_coma .

    COLON           reduce using rule 32 (variable_id_loop_coma -> ID addDirVarGlobales COMA variable_id_loop_coma .)


state 46

    (42) funcion -> tipo FUNC ID . LPARENTHESIS funcion_option RPARENTHESIS addProcDirFunc bloque clearFunc
    (43) funcion -> tipo FUNC ID . LPARENTHESIS funcion_option RPARENTHESIS variable_func addProcDirFuncVars bloque clearFunc

    LPARENTHESIS    shift and go to state 50


state 47

    (1) programa -> PROGRAM ID SEMICOLON programa_var_loop nodo18 programa_func_loop addProcDir MAIN . addMainProc LPARENTHESIS RPARENTHESIS bloque END
    (4) addMainProc -> .

    LPARENTHESIS    reduce using rule 4 (addMainProc -> .)

    addMainProc                    shift and go to state 51

state 48

    (35) variable_arr_coma -> ID addDirVarGlobales LBRACKET RBRACKET COMA . variable_arr_coma
    (34) variable_arr_coma -> . ID addDirVarGlobales LBRACKET RBRACKET
    (35) variable_arr_coma -> . ID addDirVarGlobales LBRACKET RBRACKET COMA variable_arr_coma

    ID              shift and go to state 53

    variable_arr_coma              shift and go to state 52

state 49

    (31) variable_id_loop_coma -> ID addDirVarGlobales .
    (32) variable_id_loop_coma -> ID addDirVarGlobales . COMA variable_id_loop_coma

    COLON           reduce using rule 31 (variable_id_loop_coma -> ID addDirVarGlobales .)
    COMA            shift and go to state 37


state 50
